# hibernate

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  deploy.yaml
app/: .dockerignore  .env.example  .gitignore  cast_utils.py  k8s_utils.py  main.py  pyproject.toml  tests_aks.py  tests_e2e.py  utils.py
hack/aks/: .gitignore  castai.tf  example_local.auto.tfvars  main.tf  variables.tf  versions.tf  vnet.tf
hack/eks/: eks.tf  main.tf  providers.tf  variables.tf  versions.tf  vpc.tf
hack/gke/: .gitignore  gke.tf  main.tf
hack/kind/: run.sh
tests/: test_app.py
