[tool.poetry]
name = "shrink-k8s"
version = "0.1.0"
description = ""
authors = ["Augustinas Stirbis <49340408+AugustinasS@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
kubernetes = "^24.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

