[tool.poetry]
name = "hibernate"
version = "0.1.0"
description = ""
authors = ["Leon Kuperman", "Augustinas Stirbis"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
kubernetes = "^24.2.0"
tenacity = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

